--- a/styles.scss
+++ b/styles.scss
@@ -10,7 +10,7 @@ $font-family-monospace: 'Fira Mono', monospace;
 /*-- scss:rules --*/
 
 h2 {
-  color: #004E4F !important;
+  color: #001E4E !important;
 }
 
 .brown {
