--- a/styles.scss
+++ b/styles.scss
@@ -13,6 +13,11 @@ h2 {
   color: #001E4E !important;
 }
 
+h4 {
+  color: #001E4E !important;
+  font-size: 2em !important;
+}
+
 .brown {
   color: brown;
 }
